--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -10,8 +10,8 @@ tasks:
     desc: Initialize the network
     cmds:
       - sudo ip link add dev veth0 type veth peer name veth1
-      - sudo ip addr add 192.168.1.1/24 dev veth0
-      - sudo ip addr add 192.168.1.2/24 dev veth0
+      - sudo ip addr add 10.0.0.1/24 dev veth0
+      - sudo ip addr add 10.0.0.2/24 dev veth0
       - sudo ip link set dev veth0 up
       - sudo ip link set dev veth1 up
   builder:
@@ -23,7 +23,9 @@ tasks:
     cmds:
       - docker run -w /src --rm -it
         -v {{.KERNEL_HEADER_PATH}}:/usr/include/kernel
-        -v $(pwd)/src:/src bpf-builder clang -I/usr/include/kernel/{{.LIBPF_HEADERS}} -I/usr/include/kernel -g -O2 -target bpf -c xdp.c -o xdp.o
+        -v $(pwd)/src:/src bpf-builder
+        clang -I/usr/include/kernel/{{.LIBPF_HEADERS}} -I/usr/include/kernel
+        -g -O2 -target bpf -c xdp.c -o xdp.o
 
   build_control_plane:
     desc: Build control plane
