--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -18,14 +18,19 @@ tasks:
     desc: Build a docker image which can build the bpf program
     cmds:
       - docker build -t bpf-builder -f Dockerfile .
+
   build_xdp:
     desc: Build the bpf program
     cmds:
       - docker run -w /src --rm -it
-        -v {{.KERNEL_HEADER_PATH}}:/usr/include/kernel
-        -v $(pwd)/src:/src bpf-builder
-        clang -I/usr/include/kernel/{{.LIBPF_HEADERS}} -I/usr/include/kernel
-        -g -O2 -target bpf -c xdp.c -o xdp.o
+        -v $(pwd)/src:/src bpf-builder sh -c "
+        clang -I/usr/include/kernel/{{.LIBPF_HEADERS}}
+        -g -O2 -target bpf -c xdp.c -o xdp.o"
+
+  build_kernel_headers:
+    desc: Build the kernel headers required
+    cmds:
+      - docker run --privileged --rm -it bpf-builder sh -c "/usr/bin/bpftool btf dump file /sys/kernel/btf/vmlinux format c" > src/vmlinux.h
 
   build_control_plane:
     desc: Build control plane
